==============================
- merged development branches 0.22 and 0.23.x

new features:
- CRC32 checksums in JSON output to reduce invalid results
- improved performance on Pascal devices
- improved checkpoint compatibility between versions
  - file names now contain metadata

enhancements:
- merged in file locking code from mfakto to reduce concurrency (thanks to
  James Heinrich)
- worktodo updates now use unique random temp files "__worktodo__.XXXXXX"
- updated mul_96() to use 64-bit integers (thanks to NStorm)
  - users should see a small performance increase with CUDA 12.x and above

bug fixes:
- fixed typos and formatting in output
- fix some compilation warnings
- the maximum number of threads per SM should no longer exceed the limit for
  certain architectures
- CUDA versions are now correctly detected

build:
- made the build scripts more robust
- enabled more compiler optimizations by default for a slight performance gain
  (thanks to NStorm)
- various improvements to GitHub Actions workflows (thanks to NStorm)
  - support for additional CUDA versions
  - removed dependency on deprecated windows-2019 images
  - code analysis with CodeQL
- improved visual appearance and clarity of release information (thanks to
  Danny Chia)
- added CUDA 13.x support (thanks to NStorm)
  - breaking change: compute capability 7.2 and below are dropped

other changes:
- dropped support for compute capability 1.x and 32-bit builds
- replaced deprecated cudaThreadSynchronize() with cudaDeviceSynchronize()
- removed the debug option "USE_DEVICE_PRINTF"
- code has been revamped to improve formatting and maintain consistent style
  (thanks to NStorm)
- requested by James Heinrich: results are no longer saved to deprecated
  results.txt by default (thanks to NStorm)
  - please use results.json.txt for submissions
  - set LegacyResultsTxt=1 in mfaktc.ini to restore old behavior and re-enable
    logging to results.txt